moved the data state and to be held in viz component, controls now aligned correctly in same div

--- a/src/components/ControlPanel.css
+++ b/src/components/ControlPanel.css
@@ -3,6 +3,7 @@
   border-radius: 3px;
   display: flex;
   flex-direction: column;
+  flex-basis: fit-content;
   margin: 8px;
   width: 20em;
 }
